--- a/test/fixtures/movements.yml
+++ b/test/fixtures/movements.yml
@@ -1,13 +1,12 @@
 # == Schema Information
 #
-# Table name: videos
+# Table name: movements
 #
 #  id          :integer          not null, primary key
-#  youtube_id  :string
+#  circuit_id  :integer
+#  time        :integer
 #  description :text
-#  duration    :integer
 #  title       :string
-#  featured    :boolean          default(FALSE)
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
 #
@@ -15,13 +14,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  youtube_id: MyString
+  circuit: one
+  time: 1
   description: MyText
-  duration: 1
   title: MyString
 
 two:
-  youtube_id: MyString
+  circuit: two
+  time: 1
   description: MyText
-  duration: 1
   title: MyString
