--- a/test/fixtures/workouts.yml
+++ b/test/fixtures/workouts.yml
@@ -1,12 +1,12 @@
 # == Schema Information
 #
-# Table name: videos
+# Table name: workouts
 #
 #  id          :integer          not null, primary key
-#  youtube_id  :string
+#  name        :string
+#  time        :integer
+#  intensity   :integer
 #  description :text
-#  duration    :integer
-#  title       :string
 #  featured    :boolean          default(FALSE)
 #  created_at  :datetime         not null
 #  updated_at  :datetime         not null
@@ -15,13 +15,13 @@
 # Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  youtube_id: MyString
+  name: MyString
+  time: 1
+  intensity: 1
   description: MyText
-  duration: 1
-  title: MyString
 
 two:
-  youtube_id: MyString
+  name: MyString
+  time: 1
+  intensity: 1
   description: MyText
-  duration: 1
-  title: MyString
